# DS5Dongle

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  LICENSE  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md  sdkconfig.defaults  sdkconfig.dual_chip.defaults  sdkconfig.dual_chip.devkit_left.defaults  sdkconfig.dual_chip.devkit_vspi.defaults  sdkconfig.raw_hidp.defaults
.github/workflows/: build-firmware.yml  firmware-ci.yml  windows-flasher.yml
benchmarks/: PERFORMANCE_BEST.csv  README.md  README.zh-CN.md
boards/headers/: waveshare_rp2350b_plus_w.h
components/btstack/: CMakeLists.txt
components/btstack/include/: btstack_config.h  btstack_port_esp32.h
components/btstack/port/: btstack_port_esp32.c  btstack_tlv_esp32.c  hci_transport_esp32_vhci.c
docs/: ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  AUDIO_PIPELINE.md  BUILDING.md  BUILDING.zh-CN.md  DEVELOPMENT.md  DEVELOPMENT.zh-CN.md  DUALSENSE_PORT_CHECKLIST.md  DUALSENSE_REPORT_31.md  DUAL_CHIP_PERFORMANCE_TARGET.md  DUAL_CHIP_REALTIME_SCHEDULER_DESIGN.md  DUAL_CHIP_REALTIME_SCHEDULER_SPEC.md  DUAL_CHIP_WIRING.md  FEATURES.md  FEATURES.zh-CN.md  HARDWARE.md  HARDWARE.zh-CN.md  IMPLEMENTATION_STATUS.md  M61_BLUETOOTH_CAPABILITY.md  M61_CODEC_TAIL_LATENCY_SPEC.md  M61_DEBUG_BRIDGE.md  M61_DUALSENSE_OPUS_SPECIALIZATION_SPEC.md  M61_DVFS_SPEC.md  M61_EVENT_DRIVEN_REALTIME_REFACTOR_SPEC.md  M61_FULL_PERFORMANCE_OPTIMIZATION_SPEC.md  M61_HARDWARE_PERFORMANCE_AUDIT.md  M61_MEMORY_PERFORMANCE_SPEC.md  M61_NATIVE_USB_WIRING.md  M61_PERFORMANCE_BASELINES.md  M61_PERFORMANCE_REFACTOR_SPEC.md  M61_REALTIME_OPTIMIZATION_SPEC.md  M61_REALTIME_RISK_REGISTER.md  OPEN_SOURCE.md  OPEN_SOURCE.zh-CN.md  PERFORMANCE.md  PERFORMANCE.zh-CN.md  PRIVATE_PROTOCOL.md  PROJECT_STANDARD.md  PROTOCOL.md  PROTOCOL.zh-CN.md  (+8 more)
docs/archive/: DUALSENSE_PORT_CHECKLIST.md  DUAL_CHIP_PERFORMANCE_TARGET.md  M61_BLUETOOTH_CAPABILITY.md  PROJECT_STANDARD.md  REQUIREMENTS_AUDIT.md  SPEC_ALIGNMENT.md  STAGE1_VALIDATION.md
m61/: FreeRTOSConfig.h
m61/dualsense_hidp_probe/: CMakeLists.txt  FreeRTOSConfig.h  Makefile  README.md  README.zh-CN.md  build.sh  build_opus.sh  build_windows.ps1  defconfig  defconfig.dual_chip  defconfig.dual_chip_left_spi.example  dualsense_output.c  dualsense_output.h  dualsense_parser.c  dualsense_parser.h  flash_prog_cfg.ini  flash_prog_cfg_windows.ini  m61_audio_epoch.c  m61_audio_epoch.h  m61_bt_tx_scheduler.c  m61_bt_tx_scheduler.h  m61_ds5_bridge_config.c  m61_ds5_bridge_config.h  m61_ds5_dse.c  m61_ds5_dse.h  m61_ds5_inactivity.c  m61_ds5_inactivity.h  m61_dvfs.c  m61_dvfs.h  m61_esp32_transport.c  m61_esp32_transport.h  m61_memory_bench.S  m61_memory_bench.c  m61_memory_bench.h  m61_opus_stage_profile.c  m61_opus_stage_profile.h  m61_perf_profile.c  m61_perf_profile.h  m61_ps_shortcut.c  m61_ps_shortcut.h  (+17 more)
m61/dualsense_hidp_probe/cmake/opus-1.2.1-windows/: CMakeLists.txt  config.h
m61/dualsense_hidp_probe/patches/: opus-1.2.1-disabled-prefilter-fastpath.patch  opus-1.2.1-e907-clz32.patch  opus-1.2.1-e907-exact-rcp.patch  opus-1.2.1-e907-fft-complex-mac.patch  opus-1.2.1-e907-fft-forward-only.patch  opus-1.2.1-e907-pow2-div.patch  opus-1.2.1-e907-pvq-q15-square.patch  opus-1.2.1-e907-q15-kmmwb2.patch  opus-1.2.1-e907-q16-smmwb.patch  opus-1.2.1-m61-dualsense-d4-fastpath.patch  opus-1.2.1-m61-stage-profile.patch  opus-1.2.1-m61-tcm-placement.patch
m61/esp32_prog_bridge/: CMakeLists.txt  FreeRTOSConfig.h  Kconfig  README.md  build.sh  defconfig  flash_prog_cfg.ini  main.c  usb_config.h
m61/usb_hid_gamepad_probe/: CMakeLists.txt  FreeRTOSConfig.h  build.sh  defconfig  flash_prog_cfg.ini  hid_gamepad_probe.c  main.c  msc_ram_probe.c
m61/usb_ram_disk_probe/: CMakeLists.txt  FreeRTOSConfig.h  defconfig  flash_prog_cfg.ini  main.c  usb_config.h
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  bt_ds5_btstack.c  bt_ds5_tx_scheduler.c  bt_ds5_tx_scheduler.h  bt_dualsense_host.c  bt_dualsense_host.h  bt_dualsense_raw_hidp.c  bt_dualsense_raw_hidp.h  dual_chip_scheduler_types.c  dual_chip_scheduler_types.h  dual_chip_spi_proto.c  dual_chip_spi_proto.h  dualsense_output.c  dualsense_output.h  dualsense_parser.c  dualsense_parser.h  esp32_dual_chip_response_scheduler.c  esp32_dual_chip_response_scheduler.h  esp32_dual_chip_spi.c  esp32_dual_chip_spi.h  led_status.c  led_status.h
src/: audio.cpp  audio.h  audio_epoch_pairer.h  bt.cpp  bt.h  bt_tx_scheduler.cpp  bt_tx_scheduler.h  button_functions.cpp  cmd.cpp  cmd.h  config.cpp  config.h  main.cpp  state_mgr.cpp  usb_descriptors.cpp
tools/: audit_requirements.py  build-macos.sh  build_esp32_stage1.py  build_m61.sh  capture_m61_hidp_log.py  capture_stage1_log.py  check_dual_chip_log.py  check_dual_chip_release.py  check_m61_hidp_log.py  check_m61_realtime_memory.py  check_m61_usb_windows.py  check_realtime_memory.py  check_scheduler_memory.py  check_stage1_log.py  compare_m61_perf_status.py  compare_opus_encoder_streams.c  config_tool.py  ds5_windows_test_app.py  firmware_manifest.py  flash_m61_bridge.py  flash_m61_firmware.py  flash_stage1_auto.py  flash_stage1_m61.py  flash_stage1_manual.py  generate_m61_build_manifest.py  host_c_test.py  m61_esp32_control.py  package_m61_firmware_zip.py  patch_esp_idf_hidp_l2cap.py  probe_m61_serial.py  run_m61_full_load.py  run_offline_checks.py  scheduler_ram_budget.py  scheduler_symbol_phases.json  test_audio_epoch_pairer.cpp  test_bt_tx_scheduler.cpp  test_dual_chip_scheduler.py  test_dualsense_activity.c  test_dualsense_activity.py  test_dualsense_crc32_nibble.py  (+37 more)
tools/m61-flasher/: Cargo.toml  README.md  README.zh-CN.md  build.rs
tools/m61-flasher/src/: main.rs
