idf_component_register(
    SRCS
        "app_main.c"
        "bt_ds5_btstack.c"
        "dual_chip_spi_proto.c"
        "dualsense_output.c"
        "dualsense_parser.c"
        "esp32_dual_chip_spi.c"
        "led_status.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        btstack
        esp_driver_gpio
        esp_driver_spi
        esp_timer
        nvs_flash
)
