[package]
name = "m61-flasher"
version = "0.8.2"
edition = "2024"
license = "MIT"
description = "Single-file Windows flasher for the M61 DualSense adapter"
repository = "https://github.com/ccc007ccc/DS5Dongle"
build = "build.rs"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
eframe = { version = "0.33.3", default-features = false, features = ["default_fonts", "glow"] }
hex = "0.4.3"
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rfd = { version = "0.17.2", default-features = false, features = ["common-controls-v6"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
windows-sys = { version = "0.61.2", features = ["Win32_Globalization"] }
zip = { version = "7.2.0", default-features = false, features = ["deflate"] }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
panic = "abort"
strip = "symbols"
